source/style/widgets.css
/* ... */
.QxBarSelectorBar-Left .QxBarSelectorButton-Checked,
.QxBarSelectorBar-Right .QxBarSelectorButton-Checked{
  border-top-color: #316AC5;
  border-bottom-color: #316AC5;
}








/*
  ------------------------------------------
    COMBO BOX
  ------------------------------------------
*/

.QxComboBox{
  position: absolute;
  background: #fff;
}

.QxComboBox .QxWidget{
  background: threedface;
  padding: 0;
}

.QxComboBox .QxTextField{
  border: 0 none;
  padding: 0;
  margin: 0;
  padding-top: 2px;
  background: none;
}

* html .QxComboBox .QxTextField{
  padding-top: 4px;
}

.QxComboBox-Mark,
.QxComboBox-Mark .QxTextField,
.QxComboBox-Mark .QxAtom,
.QxComboBox-Mark .QxAtom *{
  background-color: highlight;
  color: highlighttext;
}

.QxComboBox .QxListItem-Lead{
  border-color: #fff;
}







/*
  ------------------------------------------
    MENU
  ------------------------------------------
*/

.QxMenu{
  border: 2px outset;
  background: Menu;
  padding: 2px 1px 1px 2px;
}

.QxMenuButton,
.QxMenuCheckBox,
.QxMenuRadioButton{
  position: relative;
  padding: 1px 6px 1px 2px;
  border: 1px solid Menu;
  overflow: hidden;
}

.QxMenuButton-Hover,
.QxMenuCheckBox-Hover,
.QxMenuRadioButton-Hover{
  background-color: #82A4D1;
}

.QxMenuButton .QxImage,
.QxMenuButton .QxContainer,
.QxMenuCheckBox .QxImage,
.QxMenuCheckBox .QxContainer,
.QxMenuRadioButton .QxImage,
.QxMenuRadioButton .QxContainer{
  position: absolute;
}

.QxMenuSeparator{
  padding: 3px 2px 2px 2px;
  font-size: 0;
  line-height: 0;
}

.QxMenuSeparatorLine{
  height: 2px;
  border-top: 1px solid ThreeDShadow;
  border-bottom: 1px solid ThreeDHighlight;
}








/*
  ------------------------------------------
    MENUBAR
  ------------------------------------------
*/

.QxMenuBar {
  display: block;
  overflow: hidden;
  position: absolute;
  visibility: visible;
  white-space: nowrap;
}

.QxMenuBar {
  overflow: -moz-scrollbars-none;
}

.QxMenuBarButton{
  display: block;
  position: absolute;
  visibility: visible;
  white-space: nowrap;
  cursor: default;
  border: 0 none;
  padding: 4px 8px 3px 8px;
}

.QxMenuBar .QxMenuBarButton{
	position: relative;
	vertical-align: top;
	float: left;
}






/*
  ------------------------------------------
    SPINNER
  ------------------------------------------
*/

.QxSpinner{
  position: absolute; 
  background: #fff;
}

.QxSpinner .QxWidget{
  background: threedface;
  padding: 0;
}

.QxSpinner .QxTextField{
  border: 0 none;
  padding: 0;
  margin: 0;
  padding: 2px 3px;
}

* html .QxSpinner .QxTextField{
  padding-top: 3px;
}









/*
  ------------------------------------------
    WINDOW
  ------------------------------------------
*/

.QxWindow{
  background: ThreeDFace;
  padding: 2px;
}

.QxWindow .QxWindowPane{
  position: absolute; 
  background: ThreeDFace;
  color: black;
  overflow: hidden;
}

.QxWindow .QxWindowCaptionBar{
  color: #fff;
  font-weight: bold;
  position: absolute;
  padding: 1px 2px;
  
  background-color: #808080;
  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#808080', endColorStr='#C0C0C0', gradientType='1');
}

.QxWindow-Active .QxWindowCaptionBar{
  background-color: #0A246A;
  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#0A246A', endColorStr='#A6CAF0', gradientType='1');
}

.QxWindow .QxWindowCaptionBar .QxButton{
  padding: 0;
  padding-left: 1px;
}

.QxWindow .QxWindowStatusBar{
  position: absolute;
  padding: 0 4px;
}





/*
  ------------------------------------------
    BOX
  ------------------------------------------
*/

.QxBox{
  position: absolute; 
  overflow: hidden;
}

.QxBox{
  overflow: -moz-scrollbars-none;
}

